# site

./: .gitmodules  Pipfile  about.html  autobuild.sh  base.html  blog.html  build.js  build.py  head.html  index.html  matomo.html  nav.html  package-lock.json  post-base.html  projects.html  pyproject.toml  pyrss2gen.xml  resume.html  thoughts.html
css/: style.css
images/: cropped.xcf
posts/: 1.a-new-way-to-build-apps.md  2018-11-25_Integrate-Coinbase-Commerce-with-Django.md  2020-02-01_How-To-Build-Apps.md  2021-04-28_How-I-built-a-3d-ultrasonic-scanner.md  2021-04-28_How-I-built-an-ultrasonic-3d-scanner.md
